refactor(memory): manage state serialization via StateCenter in MemoryRuntime